--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I am a software student in a bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Katy, Texas.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy playing videogames and learning.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to work somewhere I can see my direct involvement with the company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in my home town of Katy, Texas.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have a passion for computers, and I feel I am up to the task of switching to a carrer I enjoy.</p>
     </section>
 
     <footer id="footer">
